# Robotics-Learning

./: .gitignore  README.md
doc/Detailed-code-explanation/controllers/: chassis_controller.md  gimbal_controller.md  gpio_controller.md  orientation_controller.md  robot-state-controller.md
doc/ROS-advanced-learning/: code-optimization.md  lidar-slam.md
doc/chassis/: mecanum_urdf.md
doc/chassis/MickX4-chassis/: LeGo-LOAM-3d.md  cartographer-2d.md  cartographer-3d.md  chassis-hardware.md  chassis-motion-control.md  chassis-node.md  gmapping.md  move-base.md
doc/chassis/mecanum_chassis/: making-mecanum-chassis-one.md  making-mecanum-chassis-two.md
doc/rm-control/: why-rm-control.md
doc/rm-software/: rm-software.md
doc/self-driving-car-practice/: practice-four.md  practice-one.md  practice-three.md  practice-two.md
doc/software-framework/: software-framework.md
doc/theory/: adrc.md  feedforward.md  lqr.md  mpc.md  单相SPWM逆变器闭环控制.md
doc/tuning-car-tutorials/: MiniPC-config.md
doc/tuning-car-tutorials/MiniPC-Peripheral-config/: EtherCAT.md  USB.md
doc/uav/: mavlink_protocal.md  vio_localization.md  what_is_mavros.md
src/mecanum_ppo_avoidance/: CMakeLists.txt  README.md  base_global_planner.xml  mecanum_chassis_controller_plugins.xml  mecanum_controller_plugins.xml  package.xml  test_controller.sh
src/mecanum_ppo_avoidance/config/: params.yaml
src/mecanum_ppo_avoidance/doc/: TEST_GUIDE.md
src/mecanum_ppo_avoidance/include/: mecanum_chassis_controller.hpp  waypoint_global_planner.hpp
src/mecanum_ppo_avoidance/launch/: display.launch  display_with_tf.launch  gazebo.launch  load_controller.launch  rviz.launch
src/mecanum_ppo_avoidance/rviz/: mecanum_display.rviz
src/mecanum_ppo_avoidance/scripts/: clean_gazebo_process.sh  run_with_log.sh
src/mecanum_ppo_avoidance/src/: mecanum_chassis_controller.cpp  teleop.cpp  waypoint_global_planner.cpp
src/mecanum_ppo_avoidance/urdf/: hero2.urdf.xacro
src/mecanum_ppo_avoidance/worlds/: empty.world
src/mybot_bringup/mybot_description/: CMakeLists.txt  package.xml
src/sentry_chassis_controller/: CMakeLists.txt  README.md  package.xml  sentry_chassis_controller_plugins.xml
src/sentry_chassis_controller/cfg/: WheelPid.cfg
src/sentry_chassis_controller/config/: teleop_feature.yaml  wheel_pid_merged.yaml  wheel_pid_params.yaml  wheel_pid_state_fix.yaml
src/sentry_chassis_controller/docs/: Mecanum_wheel_learning.md  PID_controller_reference.md  PR_DESCRIPTION.md  defense_answers.md  defense_questions.md  define_telekeyboard_node_learning.md  dynamic_reconfigure_guide.md  enhancement_summary.md  forward_kinetics_discussion.md  kinematics_learning.md  kinematics_reference.md  learning_tf_odom_pub.md  modular_teleop_update.md  odom_updater_eigen_refactor.md  odom_updater_usage.md  power_limiter_usage.md  power_visualization_guide.md  ros_control_learning_blog.md  ros_controller中的舵轮里程计设计.md  rotation_matrix.md  rotation_matrix_chassis_application.md  rqt_reconfigure_automation.md  rqt_reconfigure_learning.md  simple_chassis_controller_explanation.md  teleop_refactoring.md  功率限制调参指南.md  四轮转向轮式里程计.md  欧拉角-四元数和旋转矩阵.md  自锁功能学习.md  舵轮控制器和里程计数据计算.md  里程计更新原理详解.md  里程计标定与矫正.md
src/sentry_chassis_controller/launch/: sentry_pid_test_fixed.launch  sentry_with_ik.launch  sentry_with_odom_feature.launch  sentry_with_teleop.launch  sentry_with_tf.launch
src/sentry_chassis_controller/problems/: catkin-tools-build-problem.md  debug_controller_names.md  debug_fk_workflow.md  debug_forward_kinematics.md  load_controller_manager_problemshooting.md  (+5 more)
(+33 files in other folders)
